# optimism-hackaton

./: .gitignore  .gitmodules  README.md  build.sh  deploy.sh  docker-compose.yml
backend/: .env.example  Dockerfile  ai.py  main.py  models.py  pyproject.toml  sibyl.py
contracts/: package-lock.json  package.json
frontend/: .gitignore  Dockerfile  README.md  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/HTMLMain/: HTMLMain.tsx  Sidebar.tsx
frontend/src/app/HTMLMain/DemoMain/: EducationDemo.tsx  LoginDemo.tsx
frontend/src/app/HTMLMain/Demos/: ComplianceDemo.tsx  EducationDemo.tsx  ForecastDemo.tsx  JudgeDemo.tsx  LoginDemo.tsx  SageDemo.tsx
frontend/src/app/Header/: ConnectWalletButton.tsx  Header.tsx  TestSendRequest.tsx
frontend/src/components/demo/: DemoButton.tsx  DemoCountrySelector.tsx  DemoResponse.tsx  DemoSeparator.tsx  DemoTextArea.tsx
frontend/src/components/svgs/: compliance.tsx  education.tsx  forecast.tsx  judge.tsx  metamask.tsx  sage.tsx
frontend/src/components/ui/: input.tsx  utils.tsx
frontend/src/lib/: Sibyl.json  rent.ts  sibyl.ts
sibyl/: README.md
sibyl/src/: Sibyl.sol
